print-notifications: Don't show strange notifications when printing

Don't show notifications for:
- cups-remote-*
- other
- com.apple.print.recoverable
printer state reasons.

"cups-remote-*" are not real errors:
https://bugzilla.redhat.com/show_bug.cgi?id=883401
https://bugzilla.gnome.org/show_bug.cgi?id=683577

"other" can be emitted for no reason:
https://bugzilla.redhat.com/show_bug.cgi?id=520815

"com.apple.print.recoverable" is for internal use only.